--- a/Math-Ba-NUM/NUM_Hausaufgaben/num_hausaufgaben_main.tex
+++ b/Math-Ba-NUM/NUM_Hausaufgaben/num_hausaufgaben_main.tex
@@ -65,5 +65,7 @@ titlefont=osfamily %
     \include{num_hausaufgaben_2}
     \stepcounter{blattcount}
     \include{num_hausaufgaben_4}
+    \stepcounter{blattcount}
+    \include{num_hausaufgaben_6}
     
 \end{document}
