--- a/Math-Ba-ALGZTH/ALGZTH_Hausaufgaben/algzth_hausaufgaben_main.tex
+++ b/Math-Ba-ALGZTH/ALGZTH_Hausaufgaben/algzth_hausaufgaben_main.tex
@@ -69,7 +69,8 @@
 \include{algzth_hausaufgaben_2}
 \include{algzth_hausaufgaben_3}
 \include{algzth_hausaufgaben_4}
-
+\include{algzth_hausaufgaben_5}
+\include{algzth_hausaufgaben_6}
 
 
 \end{document}
