--- a/Math-Ba-STOCH/STOCH_Hausaufgaben/stoch_hausaufgaben_main.tex
+++ b/Math-Ba-STOCH/STOCH_Hausaufgaben/stoch_hausaufgaben_main.tex
@@ -105,6 +105,7 @@
 \include{stoch_hausaufgaben_6}
 \include{stoch_hausaufgaben_7}
 \include{stoch_hausaufgaben_8}
+\include{stoch_hausaufgaben_9}
 
 
 \end{document}
