--- a/Math-Ba-ALGZTH/ALGZTH_Vorlesung/algzth_1_1_koerpererweiterungen.tex
+++ b/Math-Ba-ALGZTH/ALGZTH_Vorlesung/algzth_1_1_koerpererweiterungen.tex
@@ -123,7 +123,7 @@ Seien $K,L,M$ Körper.
     \begin{enumerate}[leftmargin=*]
         \item $\polynom[K][a_1, \dots , a_n]$ ist der kleinste \begriff{kleinste Unterring} von $L$, der $K \cup \menge{a_1, \dots, a_n}$ enthält (``von $a_1, \dots, a_n$ über $K$ erzeugt'')
         \item $K(a_1, \dots, a_n)$ ist \begriff{kleinster Teilkörper} von $L$, der $K \cup \menge{a_1, \dots, a_n}$ enthält (``von $a_1, \dots, a_n$ über $K$ erzeugt'', ``$a_1, \dots, a_n$'' zu $K$ adjungieren'')
-        \item $L | K$ ist \begriff{endlich erzeugt} $\defequiv a_1, \dots , a_n \in L$ mit $L=K(a_1, \dots, a_n)$
+        \item $L | K$ ist \begriff{endlich erzeugt} $\defequiv$ ex. $a_1, \dots , a_n \in L$ mit $L=K(a_1, \dots, a_n)$
         \item $L | K$ ist \begriff{einfach} $\defequiv$ ex. $a \in L$ mit $L=K(a)$
     \end{enumerate}
 \end{definition}
