--- a/Math-Ba-ALGZTH/ALGZTH_Vorlesung/algzth_1_2_algebraische_koerpererweiterungen.tex
+++ b/Math-Ba-ALGZTH/ALGZTH_Vorlesung/algzth_1_2_algebraische_koerpererweiterungen.tex
@@ -75,7 +75,7 @@ Sei $L | K$ eine Körpererweiterung.
             \begin{equation*}
                 g(\alpha) = q(\alpha) \underbrace{f(\alpha)}_{=0} + r(\alpha) = r(\alpha)
             \end{equation*}
-            somit $\polynom[K] = \Image(\phi_\alpha) = \menge{g(\alpha) \colon g \in \polynom[K]} = \menge{r(\alpha) \colon r \in \polynom[K], \deg(r) < n} = \sum_{i=0}^{n-1} K * \alpha^i$
+            somit $\polynom[K][\alpha] = \Image(\phi_\alpha) = \menge{g(\alpha) \colon g \in \polynom[K]} = \menge{r(\alpha) \colon r \in \polynom[K], \deg(r) < n} = \sum_{i=0}^{n-1} K * \alpha^i$
         \end{itemize}
     \end{enumerate}
 \end{proof}
