--- a/Math-Ba-ALGZTH/ALGZTH_Hausaufgaben/algzth_hausaufgaben_main.tex
+++ b/Math-Ba-ALGZTH/ALGZTH_Hausaufgaben/algzth_hausaufgaben_main.tex
@@ -71,6 +71,7 @@
 \include{algzth_hausaufgaben_4}
 \include{algzth_hausaufgaben_5}
 \include{algzth_hausaufgaben_6}
+\include{algzth_hausaufgaben_7}
 
 
 \end{document}
