--- a/Math-Ba-STOCH/STOCH_Vorlesung/stoch_1_1_wahrscheinlichkeitsraeume.tex
+++ b/Math-Ba-STOCH/STOCH_Vorlesung/stoch_1_1_wahrscheinlichkeitsraeume.tex
@@ -125,10 +125,10 @@ Aus der Definition folgen direkt die folgenden Eigenschaften:
 
 \begin{*bemerkung}
     \begin{itemize}[leftmargin=*, nolistsep]
-        \item Die eineindeutige Beziehung zwischen Dichte und \WMass überträgt sich nicht auf den stetigen Fall.
+        \item Die eineindeutige Beziehung zwischen Dichte und Wahrscheinlichkeitsmaß überträgt sich nicht auf den stetigen Fall.
         \begin{itemize}[nolistsep]
-            \item Nicht jedes \WMass auf $(\Omega, \borel{\Omega}), \Omega \subset \Rn$ besitzt eine Dichte.
-            \item Zwei Dichtefunktionen definieren dasselbe \WMass, wenn sie sich nur auf einer Menge von Lebesgue-Maß $0$ unterscheiden.
+            \item Nicht jedes Wahrscheinlichkeitsmaß auf $(\Omega, \borel{\Omega}), \Omega \subset \Rn$ besitzt eine Dichte.
+            \item Zwei Dichtefunktionen definieren dasselbe Wahrscheinlichkeitsmaß, wenn sie sich nur auf einer Menge von Lebesgue-Maß $0$ unterscheiden.
         \end{itemize}
         \item Jede auf $\Omega \subset \Rn$ definierte Dichtefunktion $\rho$ lässt sich auf ganz $\Rn$ fortsetzen durch $\rho(x) = 0, x \notin \Omega$. Das erzeugte WMaß auf $(\Rn, \borel{\Rn})$ lässt mit den WMaß auf $(\Omega, \borel{\Omega})$ identifizieren.
         \item Mittels Dirac-Maß $\delta_{x}$ können auch jedes diskrete WMaß auf $\Omega \subset \Rn$ als WMaß auf $\Rn, \borel{\Rn}$ interpretieren:
@@ -151,7 +151,7 @@ Abschließend erinnern wir uns an:
     Dann ist $\P$ bereits durch seine Einschränkung $\P |_{\mathcal{G}}$ eindeutig bestimmt.
 \end{satz}
 \begin{proof}
-    $\nearrow$ Schhiling MINT, Satz 4.5.
+    $\nearrow$ Schilling MINT, Satz 4.5.
 \end{proof}
 
 Insbesondere definiert z.B.
