--- a/Math-Ba-STOCH/STOCH_Vorlesung/stoch_2_1_gleichverteilung.tex
+++ b/Math-Ba-STOCH/STOCH_Vorlesung/stoch_2_1_gleichverteilung.tex
@@ -4,7 +4,7 @@
 	Ist $\Omega$ endlich, so heißt \WMass mit Zähldichte $rho(\omega) = \frac{1}{\omega}$ für $\omega \in \Omega$ \begriff{(diskrete) Gleichverteilung} auf $\Omega \leadsto \Uni(\Omega)$
 \end{*erinnerung}
 
-Es gilt das für jedes $A \in \pows(\Omega)$
+Es gilt das für jedes $A \in \pows\Omega$
 \begin{equation*}
 	\P(A) = \frac{\# A}{\# \Omega}
 \end{equation*}
