--- a/Math-Ba-STOCH/STOCH_Vorlesung/stoch_1_2_zufallsvariablen.tex
+++ b/Math-Ba-STOCH/STOCH_Vorlesung/stoch_1_2_zufallsvariablen.tex
@@ -1,34 +1,34 @@
 \section{Zufallsvariablen}
 
-Zufallsvariablen dienen dazu von einen gegebenen Ereignisraum $(\Omega, \ereignisF)$ zu einem Modellausschnitt $\Omega', \ereignisF'$ überzugehen. 
+Zufallsvariablen dienen dazu von einen gegebenen Ereignisraum $(\Omega, \F)$ zu einem Modellausschnitt $\Omega', \F'$ überzugehen. 
 Es handelt sich also um Abbildungen $\abb{X}{\Omega}{\Omega'}$.
-Damit wir auch jedem Ereignis in $\ereignisF'$ eine Wahrscheinlichkeit zuordnen können, benötigen wir	
+Damit wir auch jedem Ereignis in $\F'$ eine Wahrscheinlichkeit zuordnen können, benötigen wir	
 \begin{equation*}
-    A' \in \ereignisF' \follows X^{-1} A' \in \ereignisF		
+    A' \in \F' \follows X^{-1} A' \in \F		
 \end{equation*}
 d.h. $X$ sollte \begriff{messbar} sein.
 
 \begin{definition}[Zufallsvariable]
-    Seien $(\Omega, \ereignisF)$ und $(\Omega', \ereignisF')$ Ereignisräume. Dann heißt jede messbare Abbildung
+    Seien $(\Omega, \F)$ und $(\Omega', \F')$ Ereignisräume. Dann heißt jede messbare Abbildung
     \begin{equation*}
         \abb{X}{\Omega}{\Omega'}
     \end{equation*}
-    \begriff{Zufallsvariable} (von $(\Omega, \ereignisF)$) nach $(\Omega', \ereignisF')$/ auf $(\Omega', \ereignisF')$ oder \begriff{Zufallselement}.
+    \begriff{Zufallsvariable} (von $(\Omega, \F)$) nach $(\Omega', \F')$/ auf $(\Omega', \F')$ oder \begriff{Zufallselement}.
 \end{definition}
 
 \begin{beispiel}
     \begin{enumerate}[leftmargin=*]
-        \item Ist $\Omega$ abzählbar und $\ereignisF = \pows\Omega$, so ist jede Abbildung $\abb{X}{\Omega}{\Omega'}$ messbar und damit eine Zufallsvariable.
-        \item Ist $\Omega \subset \Rn$ und $\ereignisF = \borel\Omega$, so ist jede stetige Funktion $\abb{X}{\Omega}{\R}$ messbar und damit eine Zufallsvariable.
+        \item Ist $\Omega$ abzählbar und $\F = \pows\Omega$, so ist jede Abbildung $\abb{X}{\Omega}{\Omega'}$ messbar und damit eine Zufallsvariable.
+        \item Ist $\Omega \subset \Rn$ und $\F = \borel\Omega$, so ist jede stetige Funktion $\abb{X}{\Omega}{\R}$ messbar und damit eine Zufallsvariable.
     \end{enumerate}
 \end{beispiel}
 
 \begin{satz}
-    Sei $(\Omega, \ereignisF, \P)$ ein \WRaum und $X$ eine Zufallsvariable von $(\Omega, \ereignisF)$ nach $(\Omega', \ereignisF')$. Dann definiert
+    Sei $(\Omega, \F, \P)$ ein \WRaum und $X$ eine Zufallsvariable von $(\Omega, \F)$ nach $(\Omega', \F')$. Dann definiert
     \begin{equation*}
-    \P'(A') \defeq \P\left(X^{-1}(A')\right) = \P\left(\set{X \in A'}\right), \quad A' \in \ereignisF'
+    \P'(A') \defeq \P\left(X^{-1}(A')\right) = \P\left(\set{X \in A'}\right), \quad A' \in \F'
     \end{equation*}
-    ein Wahrscheinlichkeitsmaß auf $(\Omega', \ereignisF')$, welches wir als \begriff{Wahrscheinlichkeitsverteilung von $X$ unter $\P$} bezeichnen.
+    ein Wahrscheinlichkeitsmaß auf $(\Omega', \F')$, welches wir als \begriff{Wahrscheinlichkeitsverteilung von $X$ unter $\P$} bezeichnen.
 \end{satz}
 
 \begin{proof}
@@ -36,11 +36,11 @@ d.h. $X$ sollte \begriff{messbar} sein.
     \begin{equation*}
         \P'(\Omega') = \P(X^{-1}(\Omega')) = \P(\Omega) = 1
     \end{equation*}
-    und für $A_1', A_2', \dots \in \ereignisF'$ paarweise disjunkt.
+    und für $A_1', A_2', \dots \in \F'$ paarweise disjunkt.
     \begin{equation*}
     \begin{aligned}
-        \P' \left( \bigcup_{i \geq 1} A_i' \right) 
-        = \P \left(X^{-1}\left( \bigcup_{i \geq 1} A_i' \right) \right) 
+        \P' \left( \bigcup_{i \geq 1} A_i' \right)
+        &= \P \left(X^{-1}\left( \bigcup_{i \geq 1} A_i' \right) \right) \\
         &= \P \left( \bigcup_{i \geq 1} X^{-1}(A_i') \right) \\
         &= \sum_{1 \geq 1} \P(X^{-1} A_i') \quad \text{ da auch } X^{-1}A_1', X^{-1}A_2', \dots \text{ paarweise disjunkt sind} \\
         &= \sum_{1 \geq 1} \P'(A_i)
@@ -57,7 +57,7 @@ d.h. $X$ sollte \begriff{messbar} sein.
         \end{equation*}
         \item Ist $X = \id$, so fallen die Begriffe \WMass und \WVerteilung zusammen.
         \item In der (weiterführenden) Literatur zur \WTheorie wird oft auf die Angabe eines zugrundeliegenden Wahrscheinlichkeitsraumes verzichtet und stattdessen eine ``Zufalsvariable mit Verteilung $\P$ auf $\Omega$'' eingeführt.
-        Gemeint ist (fast) immer $X$ als Identität auf $(\Omega, \ereignisF, \P)$ mit $\ereignisF = \pows\Omega$ oder $\ereignisF = \borel\Omega$.
+        Gemeint ist (fast) immer $X$ als Identität auf $(\Omega, \F, \P)$ mit $\F = \pows\Omega$ oder $\F = \borel\Omega$.
         \item Für die Verteilung von $X$ unter $\P$ schreibe $\P_X$ und $X \sim \P_{X}$ für die Tatsache, dass $X$ gemäß $\P_X$ verteilt ist.
     \end{itemize}
 \end{*bemerkung}
@@ -76,7 +76,7 @@ Da die halboffenen Intervalle $\borel\R$ erzeugen, ist die Verteilung einer reel
         \abb{F}{\R}{[0,1]} \text{ mit } x \mapsto \P((-\infty, x))
     \end{equation*}
     \begriff{(kumulative) Verteilungsfunktion von $\P$}.    
-    Ist $X$ eine reelle Zufallsvariable auf beliebigen WRaum $(\Omega, \ereignisF, \P)$, so heißt
+    Ist $X$ eine reelle Zufallsvariable auf beliebigen WRaum $(\Omega, \F, \P)$, so heißt
     \begin{equation*}
         \abb{F}{\R}{[0,1]} \text{ mit } x \mapsto \P(X \leq x) = \P(X \in (-\infty, x])
     \end{equation*} % TODO everything good with the X's here?
