--- a/Math-Ba-STOCH/STOCH_Vorlesung/stoch_3_2_unabhaengigkeit.tex
+++ b/Math-Ba-STOCH/STOCH_Vorlesung/stoch_3_2_unabhaengigkeit.tex
@@ -1,4 +1,4 @@
-\section{(Un)abhängigkeit} \label{sec: unabhaengigkeit}
+\section{Stochastische Unabhängigkeit} \label{sec: unabhaengigkeit}
 In vielen Fällen besagt die Intuition über verschiedene Zufallsexperimente / Ereignisse, dass diese sich \textit{nicht} gegenseitig beeinflussen. Für solche $A,B \in \F$ mit $\P(A) > 0$ und $\P(B) > 0$ sollte gelten
 \begin{equation*}
 	\P(A\mid B) = \P(A) \quad \und \quad \P(B\mid A) = \P(B).
@@ -78,123 +78,176 @@ In vielen Fällen besagt die Intuition über verschiedene Zufallsexperimente / E
 	und $A,B,C$ sind \textit{nicht} stochastisch unabhängig.
 \end{beispiel}
 
-\begin{definition}[Unabhängige $\sigma$-Algebren] \label{def: 3_2_15}
-	Seien $(\Omega, \F,\P)$ ein Wahrscheinlichkeitsraum, $I \neq \emptyset$ eine Indexmenge und $(E_i, \E_i)$ Messräume.
+\begin{definition}[Unabhängige $\sigma$-Algebren] \label{3_15_def}
+	Seien $(\Omega, \F,\P)$ ein Wahrscheinlichkeitsraum, $I \neq \emptyset$ eine Indexmenge und $(E_i, \Ecal_i)$ Messräume.
 	\begin{enumerate}[leftmargin=*]
 		\item Die Familie $\F_i \subset \F (i \in I)$, heißen \begriff{unabhängig}, wenn für die $\emptyset \neq J \subseteq I$ mit $\abs{J} < \infty$ gilt
 		\begin{equation*}
 			\P\brackets{\bigcap_{i \in J} A_i} = \prod_{i \in J} \P(A_i) \qquad \text{ für beliebige } A_i \in \F_i (i \in J)
 		\end{equation*}
-		\item Die Zufallsvariable $\abb{X_i}{(\Omega, \F)}{(E_i, \E_i)} (i \in I)$, heißen \begriff{unabhängig}, wenn die $\sigma$-Algebren
+		\item Die Zufallsvariable $\abb{X_i}{(\Omega, \F)}{(E_i, \Ecal_i)} (i \in I)$, heißen \begriff{unabhängig}, wenn die $\sigma$-Algebren
 		\begin{equation*}
-			\sigma(X_i) = X^{-1}(\E_i) = \menge{\menge{X_i \in F} \colon F \in \E_i} \quad (i \in I)
+			\sigma(X_i) = X^{-1}(\Ecal_i) = \menge{\menge{X_i \in F} \colon F \in \Ecal_i} \quad (i \in I)
 		\end{equation*}
 		unabhängig sind.
 	\end{enumerate}
 \end{definition}
+
+\begin{lemma}[Zusammenhang der Definitionen]
+	\label{3_16_lemma}
+	Sei $(\Omega,\F,\P)$ ein Wahrscheinlichkeitsraum, $I \neq \emptyset$, $A_i \in \F_i$ für alle $i \in I$. 
+	Die folgenden Aussagen sind äquivalent:
+	\begin{enumerate}[nolistsep]
+		\item Die Ereignisse $A_i$ ($i \in I$) sind unabhängig. 
+		\item Die $\sigma$-Algebren $\sigma(A_i)$ ($i \in I$) sind unabhängig.
+		\item Die Zufallsvariablen $\one_{A_i}$ ($i \in I$) sind unabhängig.
+	\end{enumerate}
+\end{lemma}
+\begin{proof}
+	Da die Unabhängigkeit über endliche Teilemengen definiert ist, können wir oBdA $I = \menge{1, \dots, n}$ annehmen. 
+	\begin{itemize}[leftmargin=*, nolistsep]
+		\item Da $\sigma(\one_{A_i}) = \sigma(A_i)$ folgt die Äquivalenz von (2) und (3) direkt aus \cref{3_15_def}.
+		\item Zudem ist (2) $\to$ (1) klar.
+		\item Für (1) $\to$ (2) genügt es zu zeigen, dass
+		\begin{equation*}
+			A_1, \dots, A_n \text{ unabhängig } \Rightarrow B_1, \dots, B_n \text{ unabhängig mit } B_i \in \menge{\emptyset, A_i, A_i^\complement, \Omega}
+		\end{equation*}
+		Rekursiv folgt dies bereits aus
+		\begin{equation*}
+			A_1,\dots, A_n \text{ unabhängig } \Rightarrow B_1, A_2, \dots, A_n \text{ unabhängig mit } B_1 \in \menge{\emptyset, A_1, A_1^\complement, \Omega}.
+		\end{equation*}
+		Für $B_1 \in \menge{\emptyset, A_1, \Omega}$ ist dies klar.\\
+		Sei also $B_1 = A_1^\complement$ und $J \subseteq I$, $J \neq \emptyset$. Falls $1 \notin J$, ist nichts zu zeigen. Sei $1 \in J$, dann gilt mit $A = \bigcap_{i\in J, i \neq 1} A_i$ sicherlich
+		\begin{equation*}
+			\begin{aligned}
+				\P\brackets{A_1^\complement \cap A} 
+				&= \P(A \setminus (A_1 \cap A))\\
+				&= \P(A) - \P(A_1 \cap A)\\
+				&= \prod_{i\in J \setminus \menge{1}} \P(A_i) - \prod_{i\in J}(A_i) \\
+				&= (1- \P(A_1))\prod_{i\in J\setminus \menge{1}} \P(A_i)\\
+				&= \P\brackets{A_1^\complement} \prod_{i\in J \setminus \menge{1}} \P(A_i)
+			\end{aligned}
+		\end{equation*}
+	\end{itemize}
+\end{proof}
+
+Insbesondere zeigt \cref{3_16_lemma}, dass wir in einer Familie unabhängiger Ereignisse beliebig viele Ereignisse durch ihr Komplement, $\emptyset$ oder $\Omega$ ersetzen können ohne die Unabhängigkeit zu verlieren.
+
+\begin{satz}
+	\label{3_17_satz}
+	Sei $(\Omega, \F, \P)$ Wahrscheinlichkeitsraum und $\F_i \subseteq \F, i \in I$, seien $\cap$-stabile Familien von Ereignissen. Dann gilt
+	\begin{equation*}
+		\F_i (i \in I) \text{ unabhängig } \equivalent \sigma(\F_i) (i \in I) \text{ unabhängig}. 
+	\end{equation*}
+\end{satz}
+
+\begin{proof}
+	oBdA sei $I = \menge{1, \dots, n}$ und $\Omega \in \F_i, i \in I$.
+	\begin{proof-equivalence}[leftmargin=*, nolistsep]
+		\rueckrichtung trivial, da $\F_i \subseteq \sigma(\F_i)$ und das Weglassen von Mengen erlaubt ist.
+		\hinrichtung zeigen wir rekursiv
+		\begin{enumerate}[label=(\roman*), nolistsep]
+			\item Wähle $F_i \in \F_i, i = 2, \dots,n$ und definiere für $F \in \sigma(\F_i)$ die endlichen Maße
+			\begin{equation*}
+				\mu(F) = \P\brackets{ F \cap F_2 \cap \cdots \cap F_n} \und \nu(F) = \P(F) \, \P(F_2) \, \dots \, \P(F_n)
+			\end{equation*}
+			\item Da die Familien $\F_i$ unabhängig sind, gilt
+			$\mu\mid_{\F_1} = \nu\mid_{\F_1}$.
+			Nach dem Eindeutigkeitssatz für Maße (\cref{satz: 1.9_eindeutigkeitssatz}) folgt $\mu\mid_{\sigma(\F_1)} = \nu\mid_{\sigma(\F_1)}$ also
+			\begin{equation*}
+				\P\brackets{ F \cap F_2 \cap \cdots \cap F_n} = \P(F) \P(F_2) \dots \P(F_n)
+			\end{equation*}
+			für alle $F \in \sigma(\F_i)$ und $F_i \in \F_i, i = 1, \dots, n$. Da $\Omega \in \F_i$ für alle $i$ gilt die erhaltene Produktformel auf für alle Teilemengen $J \subseteq I$.\\
+			Also sind $\sigma(\F_1), \F_2, \dots, \F_n$ unabhängig.
+			\item Wiederholtes Anwenden von (i) und (ii) liefert den Satz.
+		\end{enumerate}
+	\end{proof-equivalence}
+\end{proof}
 %
-%\begin{lemma}[Zusammenhang der Definitionen]
-%	\proplbl{3_2_16}
-%	Sei $(\Omega,\F,\P)$ Wahrscheinlichkeitsraum, $I \neq \emptyset, A \in \F, i \in I$. 
-%	Die folgenden Aussagen sind äquivalent:
-%	\begin{enumerate}
-%		\item Die Ereignisse $A_i, i \in I$ sind unabhängig. 
-%		\item Die $\sigma$-Algebren $\sigma(A_i), i \in I$ sind unabhängig.
-%		\item Die Zufallsvariablen $\indi_{A_i}, i \in I$ sind unabhängig.
-%	\end{enumerate}
-%\end{lemma}
-%\begin{proof} %TODO add ref?
-%	Da die Unabhängigkeit über endliche Teilemengen definiert ist, können wir oBdA $I = \menge{1, \dots, n}$ annehmen. 
-%	\begin{itemize}
-%		\item Da $\sigma(\indi_{A_i}) = \sigma(A_i)$ folgt die Äquivalenz von 2. und 3. direkt aus \propref{3_2_15}.
-%		\item Zudem ist 2. $\to$ 1. klar!
-%		\item Für 1 $\to$ 2. genügt es zu zeigen, dass
-%		\begin{align*}
-%			A_1, \dots, A_n \text{ unabhängig } &\Rightarrow B_1, \dots, B_n \text{ unabhängig mit } B_i \in \menge{\emptyset, A_i, A_i^C, \Omega}.
-%			\intertext{Rekursiv folgt dies bereits aus}
-%			A_1,\dots, A_n \text{ unabhängig } &\Rightarrow B_1, A_2, \dots, A_n \text{ unabhängig mit } B_1 \in \menge{\emptyset, A_1, A_1^C, \Omega}.
-%		\end{align*}
-%		Für $B_1 \in \menge{\emptyset, A_1, \Omega}$ ist dies klar.\\
-%		Sei also $B_1 = A_1^C$ und $J \subseteq I, J \neq \emptyset$. Falls $1 \not \in J$, ist nichts zu zeigen. Sei $1 \in J$, dann gilt mit
-%		\begin{align*}
-%			A &= \bigcap_{i\in J, i \neq 1} A_i
-%			\intertext{sicherlich}
-%			\P\brackets{A_1^C \cap A} &= \P(A \mengeminus (A_1 \cap A))\\
-%			&= \P(A) - \P(A_1 \cap A)\\
-%			&= \prod_{i\in J\mengeminus \menge{1}} \P(A_i) - \prod_{i\in J}(A_i)\\
-%			&= (1- \P(A_1))\prod_{i\in J\mengeminus \menge{1}} \P(A_i)\\
-%			&= \P\brackets{A_1^C})\prod_{i\in J\mengeminus \menge{1}} \P(A_i)
-%		\end{align*} 
-%	\end{itemize}
-%\end{proof}
-%
-%Insbesondere zeigt \propref{3_2_16}, dass wir in einer Familie unabhängiger Ereignisse beliebig viele Ereignisse durch ihr Komplement, $\emptyset$ oder $\Omega$ ersetzen können, ohne die Unabhängigkeit zu verlieren.
-%
-%\begin{proposition}
-%	\proplbl{3_2_17}
-%	Sei $(\Omega, \F, \P)$ Wahrscheinlichkeitsraum und $\F_i \subseteq \F, i \in I$, seien $\cap$-stabile Familien von Ereignissen. Dann gilt
-%	\begin{align*}
-%	\F_i, i \in I \text{ unabhängig } \Leftrightarrow \sigma(\F_i), i \in I \text{ unabhängig}. 
-%	\end{align*}
-%\end{proposition}
-%
-%\begin{proof}
-%	oBdA sei $I = \menge{1, \dots, n}$ und $\Omega \in \F_i, i \in I$.
-%	\begin{itemize}
-%		\item $\Leftarrow$: trivial, da $\F_i \subseteq \sigma(\F_i)$ und das Weglassen von Mengen erlaubt ist.
-%		\item $\Rightarrow$: zeigen wir rekursiv
-%		\begin{enumerate}
-%			\item Wähle $F_i \in \F_i, i = 2, \dots,n$ und defniere für $F \in \sigma(\F_i)$ die endlichen Maße
-%			\begin{align*}
-%				\mu(F) = \P\brackets{ F \cap F_2 \cap \cdots \cap F_n} \und \nu(F) = \P(F) \, \P(F_2) \, \dots \, \P(F_n)
-%			\end{align*}
-%			\item Da die Familien $\F_i$ unabhängig sind, gilt
-%			$\mu\mid_{\F_1} = \nu\mid_{\F_1}$.
-%			Nach dem Eindeutigkeitssatz für Maße (\proplbl{1_1_19}) folgt $\mu\mid_{\sigma(\F_1)} = \nu\mid_{\sigma(\F_1)}$ also
-%			\begin{align*}
-%				\P\brackets{ F \cap F_2 \cap \cdots \cap F_n} = \P(F) \P(F_2) \dots \P(F_n)
-%			\end{align*}
-%			für alle $F \in \sigma(\F_i)$ und $F_i \in \F_i, i = 1, \dots, n$. Da $\Omega \in \F_i$ für alle $i$ gilt die erhaltene Produktformel auf für alle Teilemengen $J \subseteq I$.\\
-%			Also sind
-%			\begin{align*}
-%			\sigma(\F_1), \F_2, \dots, \F_n \text{unabhängig}
-%			\end{align*}
-%			\item Wiederholtes Anwenden von $1$ und $2$ liefert den Satz.
-%		\end{enumerate}
-%	\end{itemize}
-%\end{proof}
-%
-%Mit \propref{3_2_17} folgen:
-%
-%\begin{conclusion}
-%	Sei $(\Omega,\F,\P)$ Wahrscheinlichkeitsraum und
-%	\begin{align*}
-%		\F_{i,j} \subseteq \F, \quad 1 \le i \le n, 1 \le j \le m(i)
-%	\end{align*}
-%	unabhängige, $\cap$-stabile Familien.
-%	Dann sind auch
-%	\begin{align*}
-%		\G_i = \sigma(\F_{i,1}, \dots , \F_{i,m(i)}), \quad 1 \le i \le n
-%	\end{align*}
-%	unabhängig.
-%\end{conclusion}
-%
-%\begin{conclusion}
-%	Sei $(\Omega,\F,\P)$ Wahrscheinlichkeitsraum und
-%	\begin{align*}
-%		X_{ij}: \Omega \to E, \quad 1 \le i \le n, 1 \le j \le m(i)
-%	\end{align*}
-%	unabhängige Zufallsvariablen. Zudem seinen $f_i: E^{m(i)} \to \R$ messbar. Dann sind auch die Zufallsvariablen
-%	\begin{align*}
-%		f_i(X_{i,1}, \dots, X_{i,m(i)}), \quad 1 \le i \le n
-%	\end{align*}
-%	unabhängig.
-%\end{conclusion}
-%
-%\begin{example}
-%	$X_1, \dots, X_n$ unabhängige reelle Zufallsvariablen. Dann sind auch
-%	\begin{align*}
-%	Y_1 = X_1, Y_2 = X_2 + \cdots + X_n
-%	\end{align*}
-%	unabhängig.
-%\end{example}
+Mit \cref{3_17_satz} folgen:
+
+\begin{korollar}	\label{3_18_kor}
+	Sei $(\Omega,\F,\P)$ ein Wahrscheinlichkeitsraum und $\F_{i,j} \subseteq \F$ mit $1 \le i \le n, 1 \le j \le m(i)$ unabhängige, $\cap$-stabile Familien.
+	Dann sind auch
+	\begin{equation*}
+		\G_i = \sigma(\F_{i,1}, \dots , \F_{i,m(i)}), \quad 1 \le i \le n
+	\end{equation*}
+	unabhängig.
+\end{korollar}
+\begin{proof}
+	oBdA sei $\Omega \in \F_{i,j} \enskip \forall i,j$, da $\Omega$ die Unabhängigkeit nach \cref{3_16_lemma} nicht zerstört.
+	Dann sind die Familien 
+	\begin{equation*}
+		\F_i^\cap \defeq \menge{F_{i,1} \cap \cdots \cap F_{i,m(i)} : F_{i,j} \in \F_{i,j}, 1 \le j \le m(i)} \enskip (1 \le i \le n)
+	\end{equation*}
+	$\cap$-stabil, unabhängig und es gilt $\F_{i,1}, \dots , \F_{i,m(i)} \subseteq \F_i^\cap$ (vgl. Hausaufgabe). Nach \cref{3_17_satz} sind auch $\sigma(\F_i^\cap)$ unabhängig. Damit folgt die Behauptung, da aus 
+	\begin{equation*}
+		\F_{i,1}, \dots , \F_{i,m(i)} \subseteq \F_i^\cap \subseteq \sigma(\F_{i,1}, \dots , \F_{i,m(i)}) = \G_i
+	\end{equation*} unter Anwendung des Erzeugenden-Operators $\G_i = \sigma(\F_{i,1}, \dots , \F_{i,m(i)}) \subseteq \sigma(\F_i^\cap) \subseteq \G_i$ folgt, d.h. $\sigma(\F_i^\cap) = \G_i$.
+\end{proof}
+
+\begin{korollar} \label{3_19_korollar}
+	Sei $(\Omega,\F,\P)$ ein Wahrscheinlichkeitsraum und $\abb{X_{i,j}}{\Omega}{E}$ ($1 \le i \le n, 1 \le j \le m(i)$)
+	unabhängige Zufallsvariablen. Zudem seinen $\abb{f_i}{E^{m(i)}}{\R}$ messbar. Dann sind auch die Zufallsvariablen $f_i(X_{i,1}, \dots, X_{i,m(i)})$ mit $1 \le i \le n$ unabhängig.
+\end{korollar}
+\begin{proof}
+	Setze $\F_{i,j} = \sigma(X_{i,j})$ und $\G_i = \sigma(\F_{i,1} , \dots , \F_{i,m(i)})$. Dann sind nach \cref{3_18_kor} die $\G_i$ ($i = 1, \dots , n)$ unabhängig. Zudem ist $Y_i \defeq f_i(X_{i,1}, \dots , X_{i,m(i)})$ $\G_i$-messbar, also $\sigma(Y_i) \subseteq \G_i$. Damit erben die $Y_i$ die Unabhängigkeit der $\G_i$.
+\end{proof}
+
+\begin{beispiel}
+	Seien $X_1, \dots, X_n$ unabhängige, reelle Zufallsvariablen. Dann sind auch
+	\begin{equation*}
+	Y_1 = X_1, Y_2 = X_2 + \cdots + X_n
+	\end{equation*}
+	unabhängig.
+\end{beispiel}
+
+\begin{satz}[Unabhängigkeit von Zufallsvariablen]
+	\label{3_21_satz}
+	Seien $(\Omega, \F, \P)$ ein Wahrscheinlichkeitsraum und $\abb{X_1, \dots, X_n}{(\Omega,\F)}{(E, \Ecal)}$ Zufallsvariablen. Dann sind äquivalent:
+	\begin{enumerate}[label=(\arabic*), nolistsep]
+		\item $X_1 , \dots , X_n$ sind unabhängig.
+		\item $\P(X_1 \in A_1 , \dots , X_n \in A_n) = \prod_{i=1}^n \P(X_i \in A_i) \quad \forall A_1, \dots , A_n \in \Ecal$
+		\item Die gemeinsame Verteilung der $X_i$ entspricht dem Produktmaß der einzelnen Verteilungen
+		\begin{equation*}
+			\P_{X_1 , \dots , X_n} = \P_{X_1} \otimes \dots \otimes \P_{X_n}
+		\end{equation*}
+	\end{enumerate}
+\end{satz}
+\begin{proof}
+	per Ringschluss 
+	\begin{description}[nolistsep]
+		\item [(1 $\boldsymbol{\Rightarrow}$ 2)] Seien $A_1, \dots, A_n \in \Ecal$ beliebig. Dann gilt per Definition
+		\begin{equation*}
+			\begin{aligned}
+				\P_{X_1 , \dots , X_n}(A_1 \times \dots A_n) 
+				&= \P(X_1 in A_1, \dots , X_n \in A_n) \\
+				&= \P\brackets{\bigcap_{i=1}^n \menge{X_i \in A_i}} \\
+				&= \prod_{i=1}^n \P(X_i \in A_i) \\
+				&= \prod_{i=1}^n \P_{X_i}(A_i) \\
+				&= \brackets{\bigotimes_{i=1}^n \P_{X_i}} \brackets{A_1 \times \dots \times A_n}
+			\end{aligned}
+		\end{equation*}
+		\item [(2 $\boldsymbol{\Rightarrow}$ 3)] Aus der obigen Gleichung sehen wir, dass (2) bereits (3) impliziert für alle Rechtecke $A_1 \times \dots \times A_n$. Da die Familie der Rechtecke $\cap$-stabil ist und $\Ecal^{\otimes n}$ erzeugt, folgt die Aussage aus dem Eindeutigkeitssatz für Maße.
+		\item [(3 $\boldsymbol{\Rightarrow}$ 1)] Es sei $J \subseteq \menge{1, \dots, n}$ und 
+		\begin{equation*}
+			A_i \defeq \begin{cases}
+			\text{beliebig in } \Ecal & \text{falls } i \in J \\
+			E & \text{falls } i \notin J
+			\end{cases}
+		\end{equation*}
+		Dann ist
+		\begin{equation*}
+			\begin{aligned}
+			\P(X_i \in A_i : i \in  J) 
+			&= \P(X_i \in A_i : i = 1 , \dots , n) \\
+			&= \prod_{i=1}^n \P(X_i \in A_i) \\
+			&= \prod_{i \in J} \P(X_i \in A_i)
+			\end{aligned}
+		\end{equation*}
+	\end{description}
+\end{proof}
+
+\begin{beispiel}
+	Im Urnenmodell mit Zurücklegen hat der Vektor $X = (X_1, \dots , X_n)$ mit $X_i$ = Farbe im $i$-ten Zug als Zähldichte die Produktdichte der $X_i$. $X_1 , \dots , X_n$ sind also unabhängig.
+\end{beispiel}
