--- a/Math-Ba-STOCH/STOCH_Vorlesung/stoch_0_einleitung.tex
+++ b/Math-Ba-STOCH/STOCH_Vorlesung/stoch_0_einleitung.tex
@@ -11,9 +11,9 @@
 
 \section*{Was ist Stochastik ?}
 
-Altgriechisch "Stochastikos" ($\sigma \tau  \chi \alpha \tau \iota \kappa  \zeta$) $\leadsto$ "scharfsinnig im Vermuten" % TODO
+Altgriechisch "Stochastikos" ($\sigma \tau  \chi \alpha \tau \iota \kappa  \zeta$) $\leadsto$ ``scharfsinnig im Vermuten'' % TODO
 
-Fragestellungen stammen insbesondere aus dem Glücksspiel, heute vielmehr auch aus der Versicherungs- und Finanzmathematik - überall da, wo Zufall / Risiko / Chance auftaucht.
+Fragestellungen stammen insbesondere aus dem Glücksspiel, heute vielmehr auch aus der Ver"-sicherungs- und Finanzmathematik - überall da, wo Zufall / Risiko / Chance auftaucht.
 
 \subsection*{Was ist mathematische Stochastik ?}
 \begin{itemize}[leftmargin=*]
