--- a/Math-Ba-PROSEM/prosem_collection/prosem_main.tex
+++ b/Math-Ba-PROSEM/prosem_collection/prosem_main.tex
@@ -92,6 +92,7 @@ titlefont=osfamily %
     \include{prosem_7_jonathan_abstiegsverfahren}
     \include{prosem_8_lars_schrittweitenstrategien}
     \include{prosem_9_michael_schrittweitenalgorithmen}
+    \include{prosem_10_ducanh_gradientenverfahren}
     
     
 \end{document}
