--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_local_changes.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_local_changes.tex
@@ -49,7 +49,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                         HEADER & FOOTER                         %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand*{\rightinfo}{Vorlesung Optimierung bei Dr. Martinovic im Wintersemester 2019/20}
+\newcommand*{\rightinfo}{Vorlesung ''Optimierung`` bei Dr. Martinovic im Wintersemester 2019/20}
 
 \usepackage{tikz}       % needed for right info
 \usetikzlibrary{calc}
