--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -79,6 +79,7 @@
 \label{chapter_1_einfuehrung}
 \input{optinum_1_1_aufgabenstellungGrundbegriffe}
 \input{optinum_1_2_beispieleKontinuierlicheOptimierung}
+\input{optinum_1_3_beispieleDiskreteOptimierung}
 
 
 \end{document}
