--- a/Math-Ba-PROSEM/prosem_collection/prosem_main.tex
+++ b/Math-Ba-PROSEM/prosem_collection/prosem_main.tex
@@ -83,7 +83,7 @@ titlefont=osfamily %
     
     \tableofcontents
     
-    \stepcounter{chapter}
+    \include{prosem_1_johann_optimalitaet}
     \include{prosem_2_eric_konvexeFkt}
     \include{prosem_3_friedemann_monotonie}
     \include{prosem_4_klemens_definitheit}
