--- a/texmf/tex/latex/mathoperatorsMathTUD.sty
+++ b/texmf/tex/latex/mathoperatorsMathTUD.sty
@@ -38,6 +38,8 @@
 \newcommand*{\bei}{\text{ bei }}
 
 \newcommand{\brackets}[1]{\left( #1 \right)}
+\newcommand{\klammer}[1]{\left( #1 \right)}
+\newcommand{\sqbrackets}[1]{\left\{ #1 \right\}}
 
 % >> sets and mappings
 \newcommand{\menge}[1]{\left\{ #1 \right\}}
