--- a/texmf/tex/latex/maththeorems2MathTUD.sty
+++ b/texmf/tex/latex/maththeorems2MathTUD.sty
@@ -319,6 +319,10 @@
 \theoremindent0cm
 
 \newtheorem{*anmerkung}{Anmerkung}
+\newtheorem{*interpretation}{Interpretation}
+
+\theorembodyfont{\upshape}
+\newtheorem{*erinnerung_inline}{Erinnerung}
 
 %--------------------------------------
 % theorems without numbers and without linebreak
