--- a/Math-Ba-PROSEM/prosem_collection/prosem_main.tex
+++ b/Math-Ba-PROSEM/prosem_collection/prosem_main.tex
@@ -87,7 +87,7 @@ titlefont=osfamily %
     \include{prosem_2_eric_konvexeFkt}
     \include{prosem_3_friedemann_monotonie}
     \include{prosem_4_klemens_definitheit}
-    \stepcounter{chapter}
+    \include{prosem_5_ilina_konvexeoptimierung}
     \include{prosem_6_robert_abstiegsverfahren}
     \include{prosem_7_jonathan_abstiegsverfahren}
     \include{prosem_8_lars_schrittweitenstrategien}
